fixed grade card alignment

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,12 @@ td{
 .card-grade{
   width: 200px;
   height: 110px;
+  margin: auto;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2)
+}
+
+.card-grade:last-child{
+  margin-bottom: 40px;
 }
 
 .grade-letter{
